hphp/hack/test/typecheck/anonymous_shape1.php.exp
File "anonymous_shape1.php", line 9, characters 10-42:
Invalid return type (Typing[4110])
File "anonymous_shape1.php", line 6, characters 36-38:
Expected int
File "anonymous_shape1.php", line 9, characters 36-40:
But got string
